--- a/Prototypes.Ui.ElysiumUi/Prototypes.Ui.ElysiumUi.csproj
+++ b/Prototypes.Ui.ElysiumUi/Prototypes.Ui.ElysiumUi.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{08EF3C5D-59AA-402C-BBCD-D4A1C6393D5A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Prototypes.Ui.Elysium</RootNamespace>
+    <RootNamespace>eigenein.SkypeNinja.Prototypes.Ui.ElysiumUi</RootNamespace>
     <AssemblyName>Prototypes.Ui.Elysium</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -60,13 +60,21 @@
     <AssemblyOriginatorKeyFile>..\SkypeNinja.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Elysium.Theme">
+      <HintPath>..\packages\Elysium.Theme.1.3\lib\net40\Elysium.Theme.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Expression.Interactions">
+      <HintPath>..\..\..\..\Downloads\Elysium.Demo\packages\Elysium.Theme.1.3\lib\net40\Microsoft.Expression.Interactions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Windows.Shell">
+      <HintPath>..\..\..\..\Downloads\Elysium.Demo\packages\Elysium.Theme.1.3\lib\net40\Microsoft.Windows.Shell.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Interactivity">
+      <HintPath>..\..\..\..\Downloads\Elysium.Demo\packages\Elysium.Theme.1.3\lib\net40\System.Windows.Interactivity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
@@ -114,6 +122,7 @@
       <Link>SkypeNinja.pfx</Link>
     </None>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
