--- a/Prototypes.Ui.ElysiumUi/Prototypes.Ui.ElysiumUi.csproj
+++ b/Prototypes.Ui.ElysiumUi/Prototypes.Ui.ElysiumUi.csproj
@@ -67,7 +67,7 @@
       <HintPath>..\..\..\..\Downloads\Elysium.Demo\packages\Elysium.Theme.1.3\lib\net40\Microsoft.Expression.Interactions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Windows.Shell">
-      <HintPath>..\..\..\..\Downloads\Elysium.Demo\packages\Elysium.Theme.1.3\lib\net40\Microsoft.Windows.Shell.dll</HintPath>
+      <HintPath>..\packages\Elysium.Theme.1.3\lib\net40\Microsoft.Windows.Shell.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Windows.Interactivity">
