--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="1.9.3.31" targetFramework="net40-Client" />
   <package id="System.Data.SQLite" version="1.0.82.0" targetFramework="net40-Client" />
 </packages>
