--- a/Prototypes.Ui.ElysiumUi/Prototypes.Ui.ElysiumUi.csproj
+++ b/Prototypes.Ui.ElysiumUi/Prototypes.Ui.ElysiumUi.csproj
@@ -60,19 +60,10 @@
     <AssemblyOriginatorKeyFile>..\SkypeNinja.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Elysium.Theme">
-      <HintPath>..\packages\Elysium.Theme.1.3\lib\net40\Elysium.Theme.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Expression.Interactions">
-      <HintPath>..\..\..\..\Downloads\Elysium.Demo\packages\Elysium.Theme.1.3\lib\net40\Microsoft.Expression.Interactions.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Windows.Shell">
-      <HintPath>..\packages\Elysium.Theme.1.3\lib\net40\Microsoft.Windows.Shell.dll</HintPath>
+    <Reference Include="Elysium">
+      <HintPath>..\packages\Elysium.Theme.1.5\lib\net40-client\Elysium.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Windows.Interactivity">
-      <HintPath>..\..\..\..\Downloads\Elysium.Demo\packages\Elysium.Theme.1.3\lib\net40\System.Windows.Interactivity.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml">
@@ -122,12 +113,14 @@
       <Link>SkypeNinja.pfx</Link>
     </None>
     <None Include="app.config" />
+    <None Include="en\Elysium.chm" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="ru\Elysium.chm" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
@@ -150,6 +143,21 @@
       <ProductName>Windows Installer 4.5</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="ru\Elysium.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Microsoft.Windows.Shell.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Microsoft.Expression.Drawing.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="en\Microsoft.Expression.Drawing.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="en\Elysium.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
