--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -52,7 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connectors\Common\Collections\TypedCollection.cs" />
+    <Compile Include="Connectors\Common\Collections\ItemCollection.cs" />
     <Compile Include="Connectors\Common\Filter.cs" />
     <Compile Include="Connectors\Common\Messages\Message.cs" />
     <Compile Include="Connectors\Common\Collections\PropertyCollection.cs" />
