--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Cli\packages.config" />
   <repository path="..\Core\packages.config" />
   <repository path="..\Prototypes.Ui.ElysiumUi\packages.config" />
 </repositories>
