--- a/Cli/App.config
+++ b/Cli/App.config
@@ -1,6 +1,21 @@
 <?xml version="1.0"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
-    </startup>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
+  </startup>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="console" 
+              xsi:type="ColoredConsole" 
+              layout="${time} ${message} ${exception}"
+              errorStream="true"/>
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" writeTo="console" />
+    </rules>
+  </nlog>
 </configuration>
