--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -52,6 +52,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Attributes\FieldValueTypeAttribute.cs" />
+    <Compile Include="Common\Helpers\FieldAttributeCache.cs" />
     <Compile Include="Connectors\Common\Collections\ItemCollection.cs" />
     <Compile Include="Connectors\Common\Filter.cs" />
     <Compile Include="Connectors\Common\Message.cs" />
