--- a/Cli/App.config
+++ b/Cli/App.config
@@ -9,9 +9,9 @@
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
-      <target name="console" 
-              xsi:type="ColoredConsole" 
-              layout="${time} ${message} ${exception}"
+      <target name="console"
+              xsi:type="ColoredConsole"
+              layout="${time} ${message} ${exception:format=ToString,StackTrace}"
               errorStream="true"/>
     </targets>
     <rules>
