--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\Cli\packages.config" />
   <repository path="..\Core\packages.config" />
   <repository path="..\Prototypes.Ui.ElysiumUi\packages.config" />
+  <repository path="..\Test\packages.config" />
 </repositories>
