--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -23,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>..\SkypeNinja.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>..\SkypeNinja.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -44,6 +46,10 @@
     <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net40\CommandLine.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog, Version=2.0.1.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NLog.2.0.1.2\lib\net40\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -57,10 +63,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\ConnectorFactoryAttribute.cs" />
+    <Compile Include="Common\Caches\ClassAttributeCache.cs" />
     <Compile Include="Common\Attributes\FieldValueTypeAttribute.cs" />
-    <Compile Include="Common\CopyingStatistics.cs" />
-    <Compile Include="Common\Helpers\DataReaderExtensions.cs" />
-    <Compile Include="Common\Helpers\FieldAttributeCache.cs" />
+    <Compile Include="Common\Statistics.cs" />
+    <Compile Include="Common\Extensions\DataReaderExtensions.cs" />
+    <Compile Include="Common\Caches\FieldAttributeCache.cs" />
+    <Compile Include="Common\Translator.cs" />
     <Compile Include="Connectors\Common\Collections\ItemCollection.cs" />
     <Compile Include="Connectors\Common\Filter.cs" />
     <Compile Include="Connectors\Common\Message.cs" />
@@ -89,9 +98,10 @@
     <Compile Include="Enums\SkypeEntityClass.cs" />
     <Compile Include="Connectors\Common\Collections\FilterCollection.cs" />
     <Compile Include="Enums\SkypeMessageType.cs" />
+    <Compile Include="Enums\StatisticsType.cs" />
     <Compile Include="Exceptions\MessageSkippedException.cs" />
-    <Compile Include="Extensions\UriExtensions.cs" />
-    <Compile Include="Helpers\QueryParameters.cs" />
+    <Compile Include="Common\Extensions\UriExtensions.cs" />
+    <Compile Include="Common\Helpers\QueryParameters.cs" />
     <Compile Include="Interfaces\IConnector.cs" />
     <Compile Include="Interfaces\IConnectorFactory.cs" />
     <Compile Include="Interfaces\ICopier.cs" />
@@ -102,6 +112,11 @@
     <Compile Include="Interfaces\ITargetConnector.cs" />
     <Compile Include="Interfaces\ITargetConnectorFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Strings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\SkypeNinja.pfx">
@@ -116,6 +131,13 @@
     <Content Include="x86\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
