--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -71,17 +71,20 @@
     <Compile Include="Common\Extensions\DataReaderExtensions.cs" />
     <Compile Include="Common\Caches\FieldAttributeCache.cs" />
     <Compile Include="Common\Translator.cs" />
+    <Compile Include="Connectors\Common\Collections\GrouperCollection.cs" />
     <Compile Include="Connectors\Common\Collections\ItemCollection.cs" />
     <Compile Include="Connectors\Common\Filter.cs" />
+    <Compile Include="Connectors\Common\Grouper.cs" />
     <Compile Include="Connectors\Common\Message.cs" />
     <Compile Include="Connectors\Common\Collections\PropertyCollection.cs" />
-    <Compile Include="Connectors\Common\SkypeSourceMessageFactory.cs" />
-    <Compile Include="Connectors\Common\SkypeSQLiteCommandFactory.cs" />
+    <Compile Include="Connectors\Common\MessagePath.cs" />
+    <Compile Include="Connectors\Source\Skype\SkypeSourceMessageFactory.cs" />
+    <Compile Include="Connectors\Common\Skype\SkypeSQLiteCommandFactory.cs" />
     <Compile Include="Connectors\Connector.cs" />
     <Compile Include="Connectors\SourceConnector.cs" />
-    <Compile Include="Connectors\Source\SkypeSourceConnector.cs" />
-    <Compile Include="Connectors\Source\SkypeDbSourceConnectorFactory.cs" />
-    <Compile Include="Connectors\Source\SkypeSourceMessageEnumerator.cs" />
+    <Compile Include="Connectors\Source\Skype\SkypeSourceConnector.cs" />
+    <Compile Include="Connectors\Source\Skype\SkypeDbSourceConnectorFactory.cs" />
+    <Compile Include="Connectors\Source\Skype\SkypeSourceMessageEnumerator.cs" />
     <Compile Include="Connectors\TargetConnector.cs" />
     <Compile Include="Connectors\Target\ConsoleTargetConnector.cs" />
     <Compile Include="Connectors\Target\ConsoleTargetConnectorFactory.cs" />
