--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net40-Client" />
+  <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net40-Client" />
   <package id="NLog" version="2.0.1.2" targetFramework="net40-Client" />
   <package id="System.Data.SQLite" version="1.0.86.0" targetFramework="net40-Client" />
 </packages>
